# translategrambot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  get_opus_pairs_hf.py  opus_mt_pairs.json  opus_mt_pairs_hf.json  pyproject.toml
app/: bot.py  logging_conf.py  main.py
app/api/: routes.py
app/core/: config.py  webhook.py
app/handlers/: __init__.py  echo.py  inline.py  pair_select.py  start.py  translate.py
app/i18m/: messages.py  resources.py
app/i18n/: base_texts.py  languages.py  resources.py
app/keyboards/: pairs.py
app/ml/: language_parser.py  language_sentence_split.py  language_service.py  nllb_codes.py  translation_service.py
app/services/: __init__.py  message_filter.py  user_service.py
docs/: bot_info
icons/: mainIconTransparent.xcf  mainIconWhite.xcf
tests/: test_echo_handler.py  test_i18n_resources.py  test_lang_parser.py  test_language_service.py  test_translate_handler.py  test_translation_service.py
